[package]
name = "pantheon"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
pantheon-log = { path = "../modules/pantheon-log/" }
pantheon-types = { path = "../modules/pantheon-types/" }
pantheon-core = { path = "../modules/pantheon-core/" }
pantheon-io = { path = "../modules/pantheon-io/" }
winit = "0.30.12"
